crates/codegen/tests/snapshots/ir__printing_every_type.snap
---
source: crates/codegen/tests/ir.rs
expression: "ir(\"fn main():\\n    print(1, 1.5, True, \\\"s\\\")\\n    print()\\n\")"
---
; Generated by the typhoon compiler (DESIGN.md section 6.2).
; LLVM 18+ textual IR, opaque pointers.

@str.0 = private unnamed_addr constant { i64, [1 x i8] } { i64 1, [1 x i8] c"s" }, align 8


; fn main() -> None
define internal void @ty_user_main() nounwind {
entry:
  call void @ty_print_int(i64 1)
  call void @ty_print_sep()
  call void @ty_print_float(double 1.5)
  call void @ty_print_sep()
  %t1 = zext i1 true to i8
  call void @ty_print_bool(i8 %t1)
  call void @ty_print_sep()
  %t2 = load i64, ptr @str.0, align 8
  %t3 = getelementptr inbounds i8, ptr @str.0, i64 8
  call void @ty_print_str(ptr %t3, i64 %t2)
  call void @ty_print_end()
  call void @ty_print_end()
  ret void
}

; the process entry point
define i32 @main() nounwind {
entry:
  call void @ty_rt_init()
  call void @ty_user_main()
  call void @ty_rt_exit(i32 0)
  unreachable
}

; -- runtime and intrinsics ---------------------------------------
declare void @ty_print_bool(i8) nounwind
declare void @ty_print_end() nounwind
declare void @ty_print_float(double) nounwind
declare void @ty_print_int(i64) nounwind
declare void @ty_print_sep() nounwind
declare void @ty_print_str(ptr, i64) nounwind
declare void @ty_rt_exit(i32) noreturn nounwind
declare void @ty_rt_init()
