crates/codegen/tests/snapshots/ir__recursive_fib.snap
---
source: crates/codegen/tests/ir.rs
expression: "ir(\"fn fib(n: int) -> int:\\n    if n < 2:\\n        return n\\n    return fib(n - 1) + fib(n - 2)\\n\\nfn main():\\n    print(fib(10))\\n\")"
---
; Generated by the typhoon compiler (DESIGN.md section 6.2).
; LLVM 18+ textual IR, opaque pointers.


; fn fib(n: int) -> int
define internal i64 @ty_user_fib(i64 %n.arg) nounwind {
entry:
  %n.addr = alloca i64, align 8
  store i64 %n.arg, ptr %n.addr, align 8
  %t1 = load i64, ptr %n.addr, align 8
  %t2 = icmp slt i64 %t1, 2
  br i1 %t2, label %if.then.1, label %if.end.3

if.then.1:
  %t3 = load i64, ptr %n.addr, align 8
  ret i64 %t3

if.end.3:
  %t4 = load i64, ptr %n.addr, align 8
  %t5 = sub i64 %t4, 1
  %t6 = call i64 @ty_user_fib(i64 %t5)
  %t7 = load i64, ptr %n.addr, align 8
  %t8 = sub i64 %t7, 2
  %t9 = call i64 @ty_user_fib(i64 %t8)
  %t10 = add i64 %t6, %t9
  ret i64 %t10
}

; fn main() -> None
define internal void @ty_user_main() nounwind {
entry:
  %t1 = call i64 @ty_user_fib(i64 10)
  call void @ty_print_int(i64 %t1)
  call void @ty_print_end()
  ret void
}

; the process entry point
define i32 @main() nounwind {
entry:
  call void @ty_rt_init()
  call void @ty_user_main()
  call void @ty_rt_exit(i32 0)
  unreachable
}

; -- runtime and intrinsics ---------------------------------------
declare void @ty_print_end() nounwind
declare void @ty_print_int(i64) nounwind
declare void @ty_rt_exit(i32) noreturn nounwind
declare void @ty_rt_init()
