crates/codegen/tests/snapshots/ir__short_circuit_operators.snap
---
source: crates/codegen/tests/ir.rs
expression: "ir(\"fn side(n: int) -> bool:\\n    print(n)\\n    return n > 0\\n\\nfn main():\\n    print(side(1) and side(2))\\n    print(side(0) or side(3))\\n\")"
---
; Generated by the typhoon compiler (DESIGN.md section 6.2).
; LLVM 18+ textual IR, opaque pointers.


; fn side(n: int) -> bool
define internal i1 @ty_user_side(i64 %n.arg) nounwind {
entry:
  %n.addr = alloca i64, align 8
  store i64 %n.arg, ptr %n.addr, align 8
  %t1 = load i64, ptr %n.addr, align 8
  call void @ty_print_int(i64 %t1)
  call void @ty_print_end()
  %t2 = load i64, ptr %n.addr, align 8
  %t3 = icmp sgt i64 %t2, 0
  ret i1 %t3
}

; fn main() -> None
define internal void @ty_user_main() nounwind {
entry:
  %scratch.1 = alloca i1, align 1
  %scratch.4 = alloca i1, align 1
  %t1 = call i1 @ty_user_side(i64 1)
  store i1 false, ptr %scratch.1, align 1
  br i1 %t1, label %and.rhs.2, label %and.end.3

and.rhs.2:
  %t2 = call i1 @ty_user_side(i64 2)
  store i1 %t2, ptr %scratch.1, align 1
  br label %and.end.3

and.end.3:
  %t3 = load i1, ptr %scratch.1, align 1
  %t4 = zext i1 %t3 to i8
  call void @ty_print_bool(i8 %t4)
  call void @ty_print_end()
  %t5 = call i1 @ty_user_side(i64 0)
  store i1 true, ptr %scratch.4, align 1
  br i1 %t5, label %or.end.6, label %or.rhs.5

or.rhs.5:
  %t6 = call i1 @ty_user_side(i64 3)
  store i1 %t6, ptr %scratch.4, align 1
  br label %or.end.6

or.end.6:
  %t7 = load i1, ptr %scratch.4, align 1
  %t8 = zext i1 %t7 to i8
  call void @ty_print_bool(i8 %t8)
  call void @ty_print_end()
  ret void
}

; the process entry point
define i32 @main() nounwind {
entry:
  call void @ty_rt_init()
  call void @ty_user_main()
  call void @ty_rt_exit(i32 0)
  unreachable
}

; -- runtime and intrinsics ---------------------------------------
declare void @ty_print_bool(i8) nounwind
declare void @ty_print_end() nounwind
declare void @ty_print_int(i64) nounwind
declare void @ty_rt_exit(i32) noreturn nounwind
declare void @ty_rt_init()
