crates/codegen/tests/snapshots/ir__string_concatenation_and_equality.snap
---
source: crates/codegen/tests/ir.rs
expression: "ir(\"fn main():\\n    a = \\\"Hello, \\\"\\n    b = a + \\\"Typhoon!\\\"\\n    print(b)\\n    print(b == \\\"Hello, Typhoon!\\\")\\n    print(b != a)\\n\")"
---
; Generated by the typhoon compiler (DESIGN.md section 6.2).
; LLVM 18+ textual IR, opaque pointers.

@str.0 = private unnamed_addr constant { i64, i64, [7 x i8] } { i64 7, i64 7, [7 x i8] c"Hello, " }, align 8
@str.1 = private unnamed_addr constant { i64, i64, [8 x i8] } { i64 8, i64 8, [8 x i8] c"Typhoon!" }, align 8
@str.2 = private unnamed_addr constant { i64, i64, [15 x i8] } { i64 15, i64 15, [15 x i8] c"Hello, Typhoon!" }, align 8


; fn main() -> None
define internal void @ty_user_main() nounwind {
entry:
  %a.addr = alloca ptr, align 8
  %b.addr = alloca ptr, align 8
  store ptr @str.0, ptr %a.addr, align 8
  %t1 = load ptr, ptr %a.addr, align 8
  %t2 = call ptr @ty_str_concat(ptr %t1, ptr @str.1)
  store ptr %t2, ptr %b.addr, align 8
  %t3 = load ptr, ptr %b.addr, align 8
  %t4 = load i64, ptr %t3, align 8, !tbaa !8, !invariant.load !9
  %t5 = getelementptr inbounds i8, ptr %t3, i64 16
  call void @ty_print_str(ptr %t5, i64 %t4)
  call void @ty_print_end()
  %t6 = load ptr, ptr %b.addr, align 8
  %t7 = call i8 @ty_str_eq(ptr %t6, ptr @str.2)
  %t8 = icmp ne i8 %t7, 0
  %t9 = zext i1 %t8 to i8
  call void @ty_print_bool(i8 %t9)
  call void @ty_print_end()
  %t10 = load ptr, ptr %b.addr, align 8
  %t11 = load ptr, ptr %a.addr, align 8
  %t12 = call i8 @ty_str_eq(ptr %t10, ptr %t11)
  %t13 = icmp eq i8 %t12, 0
  %t14 = zext i1 %t13 to i8
  call void @ty_print_bool(i8 %t14)
  call void @ty_print_end()
  ret void
}

; the process entry point
define i32 @main() nounwind {
entry:
  call void @ty_rt_init()
  call void @ty_user_main()
  call void @ty_rt_exit(i32 0)
  unreachable
}

; -- runtime and intrinsics ---------------------------------------
declare i8 @ty_str_eq(ptr nocapture readonly, ptr nocapture readonly) nounwind willreturn
declare noalias ptr @ty_str_concat(ptr nocapture readonly, ptr nocapture readonly) nounwind
declare void @ty_print_bool(i8) nounwind
declare void @ty_print_end() nounwind
declare void @ty_print_str(ptr, i64) nounwind
declare void @ty_rt_exit(i32) noreturn nounwind
declare void @ty_rt_init()

; -- type-based alias analysis -----------------------------------
!0 = !{!"typhoon"}
!1 = !{!"list.header", !0}
!2 = !{!"list.data", !0}
!3 = !{!"class.field", !0}
!4 = !{!"str.header", !0}
!5 = !{!1, !1, i64 0}
!6 = !{!2, !2, i64 0}
!7 = !{!3, !3, i64 0}
!8 = !{!4, !4, i64 0}
!9 = !{}
