crates/codegen/tests/snapshots/ir__while_with_break_and_continue.snap
---
source: crates/codegen/tests/ir.rs
expression: "ir(\"fn main():\\n    i = 0\\n    while i < 10:\\n        i = i + 1\\n        if i == 3:\\n            continue\\n        if i > 5:\\n            break\\n        print(i)\\n\")"
---
; Generated by the typhoon compiler (DESIGN.md section 6.2).
; LLVM 18+ textual IR, opaque pointers.


; fn main() -> None
define internal void @ty_user_main() nounwind {
entry:
  %i.addr = alloca i64, align 8
  store i64 0, ptr %i.addr, align 8
  br label %while.cond.1

while.cond.1:
  %t1 = load i64, ptr %i.addr, align 8
  %t2 = icmp slt i64 %t1, 10
  br i1 %t2, label %while.body.2, label %while.end.3

while.body.2:
  %t3 = load i64, ptr %i.addr, align 8
  %t4 = add i64 %t3, 1
  store i64 %t4, ptr %i.addr, align 8
  %t5 = load i64, ptr %i.addr, align 8
  %t6 = icmp eq i64 %t5, 3
  br i1 %t6, label %if.then.4, label %if.end.6

if.then.4:
  br label %while.cond.1

if.end.6:
  %t7 = load i64, ptr %i.addr, align 8
  %t8 = icmp sgt i64 %t7, 5
  br i1 %t8, label %if.then.7, label %if.end.9

if.then.7:
  br label %while.end.3

if.end.9:
  %t9 = load i64, ptr %i.addr, align 8
  call void @ty_print_int(i64 %t9)
  call void @ty_print_end()
  br label %while.cond.1

while.end.3:
  ret void
}

; the process entry point
define i32 @main() nounwind {
entry:
  call void @ty_rt_init()
  call void @ty_user_main()
  call void @ty_rt_exit(i32 0)
  unreachable
}

; -- runtime and intrinsics ---------------------------------------
declare void @ty_print_end() nounwind
declare void @ty_print_int(i64) nounwind
declare void @ty_rt_exit(i32) noreturn nounwind
declare void @ty_rt_init()
